{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 8,
  "lineage": "ee3d4348-16b3-175b-0bca-c79402bf859b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695862935125:internet-gateway/igw-004c61086649f7e86",
            "id": "igw-004c61086649f7e86",
            "owner_id": "695862935125",
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-igw"
            },
            "vpc_id": "vpc-0a1a0bfa528ce9795"
          },
          "dependencies": [
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jenkins_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695862935125:route-table/rtb-0291258a522f9c94d",
            "id": "rtb-0291258a522f9c94d",
            "owner_id": "695862935125",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004c61086649f7e86",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1a0bfa528ce9795"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jenkins",
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0402e1df62367ecd7",
            "route_table_id": "rtb-0291258a522f9c94d",
            "subnet_id": "subnet-07caca70237a8cc62"
          },
          "dependencies": [
            "aws_internet_gateway.jenkins",
            "aws_route_table.jenkins_public",
            "aws_subnet.jenkins_public",
            "aws_vpc.jenkins",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695862935125:security-group/sg-0eb71a6d4630ae864",
            "description": "Security group for Jenkins CI/CD server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb71a6d4630ae864",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins Web UI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "695862935125",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1a0bfa528ce9795"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695862935125:subnet/subnet-07caca70237a8cc62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07caca70237a8cc62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "695862935125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-public-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-public-subnet"
            },
            "vpc_id": "vpc-0a1a0bfa528ce9795"
          },
          "dependencies": [
            "aws_vpc.jenkins",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:695862935125:vpc/vpc-0a1a0bfa528ce9795",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-07f80bfc949b5aef1",
            "default_route_table_id": "rtb-0e8e2488d8fca4d69",
            "default_security_group_id": "sg-05afa4d3ede063bd1",
            "dhcp_options_id": "dopt-0d3f33f83589442e6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a1a0bfa528ce9795",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e8e2488d8fca4d69",
            "owner_id": "695862935125",
            "tags": {
              "Environment": "dev",
              "Name": "jenkins-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jenkins-vpc"
            }
          }
        }
      ]
    }
  ]
}